--- a/broker/logging.conf
+++ b/broker/logging.conf
@@ -13,7 +13,7 @@ handlers=consoleHandler
 
 [handler_consoleHandler]
 class=StreamHandler
-level=ERROR
+level=DEBUG
 formatter=simpleFormatter
 args=(sys.stdout,)
 
