Created docker compose file to run the broker in a container with a static IPv6 address. The address can be configured inside the docker-compose.yml.

--- a/broker/Dockerfile
+++ b/broker/Dockerfile
@@ -5,4 +5,4 @@ RUN ls CoAPthon
 RUN cd CoAPthon && python setup.py sdist
 RUN pip install CoAPthon/dist/CoAPthon-4.0.2.tar.gz
 EXPOSE 5683
-CMD [ "python", "./app.py" ]
+CMD [ "python", "app.py" ]
