--- a/broker/Dockerfile
+++ b/broker/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:2.7
 ADD *.py /
-RUN git clone https://github.com/Tanganelli/CoAPthon.git
+RUN git clone https://github.com/federicorossifr/CoAPthon.git
 RUN ls CoAPthon
 RUN cd CoAPthon && python setup.py sdist
 RUN pip install CoAPthon/dist/CoAPthon-4.0.2.tar.gz
