--- a/broker/Dockerfile
+++ b/broker/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:2.7
 ADD *.py /
+ADD *.conf /
 RUN git clone https://github.com/federicorossifr/CoAPthon.git
 RUN ls CoAPthon
 RUN cd CoAPthon && python setup.py sdist
