--- a/coap-browser/docker-compose.yml
+++ b/coap-browser/docker-compose.yml
@@ -2,15 +2,15 @@ version: '2.1'
 
 services:
   app:
-    image: "federicorossir/coap-browser"
+    image: "federicorossir/coap-browser:latest"
     ports:
         - "8080:8080"
     networks:
       app_net:
-        ipv4_address: "192.168.1.100"
+        ipv6_address: "AAAA:9400:1000:7::DEAD"
 networks:
   app_net:
+    enable_ipv6: true
     ipam:
       config:
-        - subnet: 192.168.1.0/24
-          gateway: 192.168.1.1
+        - subnet: "AAAA:9400:1000:7::/64"
